--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue2-google-maps": "^0.10.7",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
