--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.27.2",
     "core-js": "^3.19.3",
+    "mapbox-gl": "^2.10.0",
     "nuxt": "^2.15.8",
     "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
