--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxt/postcss8": "^1.1.3",
     "autoprefixer": "^10.4.8",
     "eslint-config-prettier": "^8.3.0",
+    "nuxt-gsap-module": "^1.7.2",
     "postcss": "^8.4.16",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.1.8"
