--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.19.3",
     "mapbox-gl": "^2.10.0",
     "nuxt": "^2.15.8",
+    "nuxt-lazy-load": "^1.2.9",
     "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
